<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Thorntail JEE8/MicroProfile Docker Parent POM</name>
    <groupId>nl.casparderksen</groupId>
    <artifactId>thorntail-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <browser>phantomjs</browser>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Maven plugins -->
        <docker-maven-plugin.version>0.27.2</docker-maven-plugin.version>
        <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
        <flyway-maven-plugin.version>3.0</flyway-maven-plugin.version>

        <!-- JEE / Thorntail -->
        <javaee-api.version>8.0</javaee-api.version>
        <thorntail.version>2.2.1.Final</thorntail.version>

        <!-- Microprofile extensions -->
        <healthprobe-system.version>1.0.5</healthprobe-system.version>
        <healthprobe-jvm.version>1.0.5</healthprobe-jvm.version>
        <health-ui.version>1.0.5</health-ui.version>
        <swagger-ui.version>1.0.1</swagger-ui.version>

        <!-- Generic libraries -->
        <lombok.version>1.18.4</lombok.version>
        <slf4j.version>1.7.25</slf4j.version>

        <!-- Databases -->
        <hibernate.version>5.1.16.Final</hibernate.version>
        <h2.version>1.4.197</h2.version>
        <mysql.version>8.0.13</mysql.version>
        <ojdbc8.version>18.3.0.0</ojdbc8.version>
        <postgresql.version>42.2.5</postgresql.version>

        <!-- Arquillian -->
        <arquillian-bom.version>1.1.12.Final</arquillian-bom.version>
        <arquillian-drone-bom.version>2.0.1.Final</arquillian-drone-bom.version>
        <graphene-webdriver.version>2.1.0.Final</graphene-webdriver.version>

        <!-- Test libraries -->
        <assertj-core.version>3.11.1</assertj-core.version>
        <assertj-db.version>1.2.0</assertj-db.version>
        <mockito-core.version>2.23.4</mockito-core.version>
        <rest-assured.version>3.2.0</rest-assured.version>

    </properties>

    <build>

        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>io.thorntail</groupId>
                    <artifactId>thorntail-maven-plugin</artifactId>
                    <version>${thorntail.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <version>${flyway-maven-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>io.thorntail</groupId>
                <artifactId>thorntail-maven-plugin</artifactId>
                <configuration>
                    <properties>
                        <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                    </properties>
                </configuration>
                <executions>
                    <execution>
                        <id>package</id>
                        <goals>
                            <goal>package</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

    </build>

    <dependencyManagement>
        <dependencies>

            <!-- JEE -->

            <dependency>
                <groupId>javax</groupId>
                <artifactId>javaee-api</artifactId>
                <version>${javaee-api.version}</version>
            </dependency>

            <!-- Thorntail -->

            <dependency>
                <groupId>io.thorntail</groupId>
                <artifactId>bom-stable</artifactId>
                <version>${thorntail.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.thorntail</groupId>
                <artifactId>flyway</artifactId>
                <version>${thorntail.version}</version>
            </dependency>

            <!-- Microprofile Extensions -->

            <dependency>
                <groupId>org.microprofile-ext.health-ext</groupId>
                <artifactId>healthprobe-system</artifactId>
                <version>${healthprobe-system.version}</version>
            </dependency>

            <dependency>
                <groupId>org.microprofile-ext.health-ext</groupId>
                <artifactId>healthprobe-jvm</artifactId>
                <version>${healthprobe-jvm.version}</version>
            </dependency>

            <dependency>
                <groupId>org.microprofile-ext.health-ext</groupId>
                <artifactId>health-ui</artifactId>
                <version>${health-ui.version}</version>
            </dependency>

            <dependency>
                <groupId>org.microprofile-ext.openapi-ext</groupId>
                <artifactId>swagger-ui</artifactId>
                <version>${swagger-ui.version}</version>
            </dependency>

            <!-- Generic libraries -->

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <!-- Databases -->

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-c3p0</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.oracle.jdbc</groupId>
                <artifactId>ojdbc8</artifactId>
                <version>${ojdbc8.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <!-- Arquillian -->

            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>${arquillian-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.jboss.arquillian.extension</groupId>
                <artifactId>arquillian-drone-bom</artifactId>
                <version>${arquillian-drone-bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.jboss.arquillian.graphene</groupId>
                <artifactId>graphene-webdriver</artifactId>
                <version>${graphene-webdriver.version}</version>
                <type>pom</type>
            </dependency>

            <!-- Test libraries -->

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj-core.version}</version>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-db</artifactId>
                <version>${assertj-db.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
            </dependency>

            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <!-- JEE -->

        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Thorntail runner for IDE -->

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>thorntail-runner</artifactId>
            <version>${thorntail.version}</version>
        </dependency>

        <!-- MicroProfile -->

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>microprofile-health</artifactId>
        </dependency>

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>microprofile-config</artifactId>
        </dependency>

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>microprofile-openapi</artifactId>
        </dependency>

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>microprofile-metrics</artifactId>
        </dependency>

        <!-- MicroProfile extensions -->

        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>healthprobe-jvm</artifactId>
        </dependency>

        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>healthprobe-system</artifactId>
        </dependency>

        <dependency>
            <groupId>org.microprofile-ext.health-ext</groupId>
            <artifactId>health-ui</artifactId>
        </dependency>

        <!-- Generic libraries-->

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Test dependencies -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Arquillian -->

        <dependency>
            <groupId>io.thorntail</groupId>
            <artifactId>arquillian</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.graphene</groupId>
            <artifactId>graphene-webdriver</artifactId>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- Test libraries -->

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-db</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <profiles>
        <profile>
            <id>docker</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>io.fabric8</groupId>
                            <artifactId>docker-maven-plugin</artifactId>
                            <version>${docker-maven-plugin.version}</version>
                        </plugin>
                    </plugins>
                </pluginManagement>

                <plugins>
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <configuration>
                            <images>
                                <image>
                                    <name>${project.artifactId}</name>
                                    <run>
                                        <ports>
                                            <port>8443:8443</port>
                                            <port>8080:8080</port>
                                            <port>5005:5005</port>
                                        </ports>
                                        <env>
                                            <JAVA_TOOL_OPTIONS>
                                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
                                            </JAVA_TOOL_OPTIONS>
                                        </env>
                                        <memory>1000000000</memory>
                                        <volumes>
                                            <bind>
                                                <volume>./security:/opt/security</volume>
                                            </bind>
                                        </volumes>
                                        <cmd>-Shttps -Sh2</cmd>
                                    </run>
                                    <build>
                                        <from>openjdk:8-jre</from>
                                        <tags>
                                            <tag>${project.version}</tag>
                                        </tags>
                                        <labels>
                                            <artifactId>${project.artifactId}</artifactId>
                                            <version>${project.version}</version>
                                        </labels>
                                        <ports>
                                            <port>8080</port>
                                        </ports>
                                        <user>nobody</user>
                                        <workdir>/opt</workdir>
                                        <assembly>
                                            <basedir>/</basedir>
                                            <inline>
                                                <files>
                                                    <file>
                                                        <source>
                                                            ${project.build.directory}/${project.build.finalName}-thorntail.jar
                                                        </source>
                                                        <outputDirectory>/opt</outputDirectory>
                                                    </file>
                                                </files>
                                            </inline>
                                        </assembly>
                                        <entryPoint>
                                            <exec>
                                                <arg>/usr/bin/java</arg>
                                                <arg>-Djava.net.preferIPv4Stack=true</arg>
                                                <arg>-Djava.security.egd=file:/dev/./urandom</arg>
                                                <arg>-XX:+UnlockExperimentalVMOptions</arg>
                                                <arg>-XX:+UseCGroupMemoryLimitForHeap</arg>
                                                <arg>-XX:MaxRAMFraction=1</arg>
                                                <arg>-jar", "${project.build.finalName}-thorntail.jar</arg>
                                            </exec>
                                        </entryPoint>
                                    </build>
                                </image>
                            </images>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>pre-integration-test</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>post-integration-test</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>stop</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>

            </build>
        </profile>
    </profiles>

</project>
